feat: scaffold about pages, implement menu system and breadcrumbs (#60)
* feat: initial scaffolding for About / Overview

* feat: add About / Philosophy page, unify page headers

* feat: initial menu implementation (mobile and desktop)

* fix: resolve build issues introduced in last commit

* feat: configure breadcrumbs, adjust current page indicators

* fix: desktop 404 colours, remove banner background when menu closes

* feat: add PostCSS and Autoprefixer

* fix: resolve linting errors

* feat: support menus when JavaScript is disabled

* fix: text decoration thickness for current page

* feat: complete menu behaviour with JavaScript

* fix: adjust current page indicator for no-js

--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -4,14 +4,7 @@
 
 {% block content %}
     <article class="container">
-        <header>
-            <div class="container inner">
-                <h1>{{ title }}</h1>
-                {% if intro %}
-                <div class="intro">{{ intro | markdownFilter | safe }}</div>
-                {% endif %}
-            </div>
-        </header>
+        {% include 'partials/components/page-header.njk' %}
         {%- if sections %}
             {%- for section in sections %}
             {% set sectionTitle = '' %}
@@ -56,6 +49,12 @@
             </div>
         </section>
             {%- endfor %}
+        {%- else %}
+        <div class="content">
+            <div class="inner">
+                {{ content | safe }}
+            </div>
+        </div>
         {%- endif %}
     </article>
 {% endblock %}
