--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -26,42 +26,39 @@ a:focus {
   outline: none;
 }
 
-a:visited,
-a:visited .underline {
+.content a:visited {
   text-decoration-color: #f6e05e;
 }
 
-@supports (mask-image: url('dot.svg')) {
-  main h1,
-  main h2,
-  main h3,
-  main h4,
-  .project__link,
-  .tool__link {
-    a:not([rel="external"])::after {
-      background: currentColor;
-      content: "";
-      margin-bottom: -0.25rem;
-      margin-left: 0;
-      mask-image: url('../images/internal.svg');
-      mask-position: center;
-      mask-repeat: no-repeat;
-      mask-size: 1.5em;
-      padding-left: 1em;
-    }
+main h1,
+main h2,
+main h3,
+main h4,
+.project__link,
+.tool__link {
+  a:not([rel="external"])::after {
+    background: currentColor;
+    content: "";
+    margin-bottom: -0.25rem;
+    margin-left: 0;
+    mask-image: url('../images/internal.svg');
+    mask-position: center;
+    mask-repeat: no-repeat;
+    mask-size: 1.5em;
+    padding-left: 1em;
+  }
 
-    a[rel~="external"]::after,
-    a[href^="mailto:"]::after {
-      background-color: currentColor;
-      content: "";
-      margin-bottom: -0.25rem;
-      margin-left: 0.25rem;
-      mask-image: url('../images/external.svg');
-      mask-position: center;
-      mask-repeat: no-repeat;
-      mask-size: 1.5em;
-      padding-left: 1em;
-    }
+  a[rel~="external"]::after,
+  a[href^="mailto:"]::after {
+    background-color: currentColor;
+    content: "";
+    margin-bottom: -0.25rem;
+    margin-left: 0.25rem;
+    mask-image: url('../images/external.svg');
+    mask-position: center;
+    mask-repeat: no-repeat;
+    mask-size: 1.5em;
+    padding-left: 1em;
   }
 }
 
@@ -69,16 +66,33 @@ blockquote {
   padding-left: 2rem;
 }
 
-ul {
-  list-style-type: disc;
-}
+.content {
+  ul {
+    list-style: none;
+    padding-left: 0;
+  }
 
-ol {
-  list-style-type: decimal;
-}
+  ol {
+    list-style-type: decimal;
+  }
 
-li + li {
-  margin-top: 0;
+  li {
+    line-height: (24 / 16);
+  }
+
+  li + li {
+    margin-top: 0.875rem;
+  }
+
+  ul li::before {
+    background-color: $silver;
+    border-radius: 50%;
+    content: "";
+    display: inline-block;
+    height: 0.375rem;
+    margin: 0.1875rem 0.5rem 0.1875rem 0;
+    width: 0.375rem;
+  }
 }
 
 @each $name, $color in $colors {
