--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,6 +2,8 @@
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
 .banner {
+  --parent-bg: var(--header-bg, $indigo-100);
+
   background: var(--header-bg, $indigo-100);
   color: var(--header-fg, $black);
   padding-top: 1.5rem;
@@ -13,4 +15,20 @@
   flex-direction: row;
   margin: 0 auto;
   padding: 0 1.5rem;
+}
+
+.no-js {
+  .banner > .container {
+    align-items: flex-start;
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .banner--menu-visible {
+    --parent-bg: var(--indigo-900);
+    --header-bg: var(--indigo-900);
+    --header-fg: var(--white);
+    --header-accent: var(--indigo-500);
+  }
 }
