--- a/src/scss/pages/_generic.scss
+++ b/src/scss/pages/_generic.scss
@@ -56,7 +56,7 @@ article header .intro {
 
   @media screen and (min-width: 1024px) {
     padding: 6rem 0;
-    width: 75%;
+    width: calc(2 / 3 * 100%);
   }
 }
 
