fix: simplify and improve responsive styles

--- a/src/_includes/partials/components/brand.njk
+++ b/src/_includes/partials/components/brand.njk
@@ -2,10 +2,10 @@
     {% if page.url === '/' %}
         {% include "svg/logo.svg" %}
     {% else %}
-        <span class="hidden-tb">
+        <span class="brand__logo">
         {% include "svg/logo.svg" %}
         </span>
-        <span class="hidden-mb">
+        <span class="brand__logotype">
         {% include "svg/logo-wordmark.svg" %}
         </span>
     {% endif %}
