--- a/src/scss/components/_brand.scss
+++ b/src/scss/components/_brand.scss
@@ -17,25 +17,34 @@
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .brand {
     width: 14.5rem;
   }
 }
 
 .brand svg {
-  display: inline;
   fill: currentColor;
   margin-left: 1.125rem;
   width: 2.5rem;
 }
 
-.brand .hidden-mb svg {
-  width: 12.45689655rem;
+.brand .brand__logo svg {
+  display: inline;
+  width: 2.5rem;
+
+  @media (min-width: 768px) {
+    display: none;
+  }
 }
 
-.brand .hidden-dk svg {
-  width: 2.5rem;
+.brand .brand__logotype svg {
+  display: none;
+  width: 12.45689655rem;
+
+  @media (min-width: 768px) {
+    display: inline;
+  }
 }
 
 .page--home {
@@ -52,6 +61,14 @@
     &:active {
       background: transparentize($logo, 0.3);
     }
+  }
+
+  .brand__logo {
+    display: inline;
+  }
+
+  .brand__logotype {
+    display: none;
   }
 }
 
@@ -70,17 +87,5 @@
       background: var(--indigo-1000);
       color: var(--white);
     }
-  }
-}
-
-.hidden-mb {
-  @media (max-width: 767px) {
-    display: none;
-  }
-}
-
-.hidden-tb {
-  @media (min-width: 768px) {
-    display: none;
   }
 }
