--- a/src/scss/pages/_team.scss
+++ b/src/scss/pages/_team.scss
@@ -17,6 +17,10 @@ article.person {
   }
 }
 
+.person + .person {
+  margin-top: 3rem;
+}
+
 .link--email {
   align-items: center;
   display: inline-flex;
@@ -31,14 +35,14 @@ article.person {
   margin-right: 0.25rem;
 }
 
-@media (min-width: 1024px) {
-  .page--team article .content {
-    padding: 3rem 0;
+.page--team article .content {
+  padding: 3rem 0;
+}
 
-    @media screen and (min-width: 1024px) {
-      padding: 6rem 0;
-      width: calc(2 / 3 * 100%);
-    }
+@media screen and (min-width: 1024px) {
+  .page--team article .content {
+    padding: 6rem 0;
+    width: calc(2 / 3 * 100%);
   }
 
   .grid.grid--people {
